--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pro16MHzatmega328]
-platform = atmelavr
-board = pro16MHzatmega328
+[env:LGT8F328P]
+platform = lgt8f
+board = LGT8F328P
 framework = arduino
-build_flags = -I../../../packages/toolchain-atmelavr/avr/include
+lib_deps =
+    adafruit/Adafruit SSD1306@^2.5.13
